side sidebar implemented; fixed spacing errors

--- a/assets/styles/link-section.scss
+++ b/assets/styles/link-section.scss
@@ -1,40 +1,23 @@
 @import './variables.scss';
+@import './button.scss';
 
 .content > ul {
   list-style: none;
   margin-left: 0;
   padding-left: 0;
 
-  li{
-    a {color: unset; text-decoration: unset; }
-
-    display: inline-block;
-    // background-color: black;
-    // color: white;
-    
-    border: 1px solid black;
-
-    // some text style for better readability
-    letter-spacing: 1px;
-    
+  li{    
+    @include button;
 
     // inline button group style
     margin-right: var(--dense-padding);
     margin-bottom: var(--dense-padding);
 
-    padding: var(--dense-padding) calc(2.3* var(--dense-padding));
-    border-radius: var(--border-radius);
-
-
-    transition: 0.2s;
     &:hover {
       // highlight on hover
       border: 1px solid blue;
       color: blue;
-      font-weight: 700;
 
-      // make button come up a little
-      transform: translateY(-1px);
       
       // desktop only
       @include not-mobile-screen {
