--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,10 +1,18 @@
-html {
+html, body {
+  margin: 0;
+  padding: 0;
+
   line-height: 1.6;
   font-size: 19px;
   font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif; 
 }
 
+* {
+  // margin: 0;
+  // padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   background-color: rgba(255, 255, 255, 0.85);
-  color: rgba(0, 0, 0, 0.822);
 }
