--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -5,6 +5,11 @@
     @content
   }
 }
+@mixin tablet-screen {
+  @media screen and (max-width: 1150px) {
+    @content
+  }
+}
 @mixin not-mobile-screen {
   @media screen and (min-width: 750px) {
     @content
@@ -18,4 +23,6 @@
   --extra-padding: 1.3em;
 
   --border-radius: 0.25em;
+
+  --font-color: rgba(0, 0, 0, 0.822);
 }
